# PR2M3

./: pyproject.toml
L0. poetry, linters, formatters/my_proj/: pyproject.toml
L0. poetry, linters, formatters/my_proj/src/my_proj/: main.py  module.py
L0. poetry, linters, formatters/my_proj/tests/: test1.py
L1 Introduction to Django/dj_basics/: db.sqlite3  pyproject.toml
L1 Introduction to Django/dj_basics/config/: settings.py  urls.py
L1 Introduction to Django/dj_basics/my_app/: urls.py  views.py
L1 Introduction to Django/dj_basics/templates/: index.html  profile.html
L10 Forms/forms/: db.sqlite3  pyproject.toml
L10 Forms/forms/config/: settings.py
L10 Forms/forms/posts/: admin.py  forms.py  models.py  urls.py  views.py
L10-11 Forms/forms/config/: urls.py
L10-11 Forms/forms/posts/: forms.py  models.py
L12 Messages/mes/: db.sqlite3  pyproject.toml
L12 Messages/mes/config/: settings.py
L12 Messages/mes/posts/: urls.py  views.py
L13 Auth/auth/config/: settings.py
L13 Auth/auth/posts/: admin.py  apps.py  forms.py  models.py
L13 Auth/auth/users/: forms.py  (+1 more)
L13-14 Auth/auth/: db.sqlite3  pyproject.toml
L15 DRF/drf/: db.sqlite3  pyproject.toml
L15-16 DRF/drf/: db.sqlite3
L15-17 DRF/drf/: db.sqlite3
L15-19 DRF/drf/: db.sqlite3  init_data.json
L15-20 DRF/drf/: db.sqlite3
L2 Views/views/: .env  pyproject.toml
L2 Views/views/config/: settings.py  urls.py
L2 Views/views/myapp/: models.py  urls.py  views.py
L2 Views/views/myapp/migrations/: 0001_initial.py  0002_profile_surname.py  0003_book_remove_profile_age_remove_profile_surname_and_more.py
L2 Views/views/templates/: profile.html
L3 Templates/templates/: pyproject.toml
L5 CBV/cbv/: db.sqlite3  pyproject.toml
L5 CBV/cbv/config/: settings.py
L5 CBV/cbv/posts/: models.py  urls.py  views.py
L5 CBV/cbv/posts/templates/posts/: about.html  article_detail.html  article_list.html
L6 QuerySet/: pyproject.toml
L6 QuerySet/qset/: db.sqlite3
L7 More Models/mmodels/: db.sqlite3  pyproject.toml
L7 More Models/mmodels/posts/: models.py  urls.py  views.py
L7 More Models/mmodels/posts/templates/posts/: article_detail.html  article_list.html  base.html
L8 Agregate, Annotate/agr/: pyproject.toml
L9 Admin/admin/: db.sqlite3
(+129 files in other folders)
