[project]
name = "views"
version = "0.1.0"
description = ""
authors = [
    {name = "'Ruslan",email = "'sounditbox@gmail.com'"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
