[project]
name = "mmodels"
version = "0.1.0"
description = ""
authors = [
    {name = "'Ruslan",email = "'sounditbox@gmail.com'"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "ipython (>=9.2.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
